MilestoneRFAFullSandBox/src/objects/ProfitCenter__c.object
<CustomObject>
    <description>RFA R1 - Stores the Profit Center Hierarchy within the RFA Application. Profit Centers will also be referenced on specific RFAs.</description>
    <fields>
        <fullName>ActiveInactive__c</fullName>
        <label>Active/Inactive</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NeedRecalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for recalculation of sharing model</description>
        <inlineHelpText>Update Sharing for Attached RFAs ボタンは再計算フラグがチェックされているとき、および収益センターが有効なときに実行されます。</inlineHelpText>
        <label>Need Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfitCenterName__c</fullName>
        <label>Profit Center Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Profit Centers</label>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>ProfitCenterName__c</columns>
        <columns>ActiveInactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All - Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Inactive</fullName>
        <columns>NAME</columns>
        <columns>ProfitCenterName__c</columns>
        <columns>ActiveInactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All - Inactive</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>Profit Center Number</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Id00000016kuSEAQ_00Nd000000594cmEAA</fullName>
        <active>true</active>
        <errorMessage>You may only select Active Profit Centers and the Profit Center must have a Location Coordinator assigned to it. Contact the appropriate Location Coordinator if you cannot find a particular Profit Center.</errorMessage>
        <field>RFA__c.ProfitCenterNumber__c</field>
        <filterItems>
            <field>ProfitCenter__c.ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>RFA_Profit Center</name>
    </namedFilters>
    <sharingModel>Read</sharingModel>
</CustomObject>